tests/js/valid/enum/parses/spaces-2.buri
Items = .hello(Int, Str)
item = Items.hello(--comment
--comment
1--comment
--comment
,--comment
--comment
""--comment
--comment
)--comment
