tests/js/invalid/enum/mismatched-types-2.buri
Color = .rgb(Int, Int, Int) | .hex(Str)

blue = Color.rgb("0", "0", "255")